# SaidoAgent

./: .env.example  .gitignore  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture-review-phase1.md  architecture-review-phase2.md  architecture-review-phase3.md  architecture-review-phase4.md  deployment.md  infra-log-phase1.md  infra-log-phase2.md  infra-log-phase3.md  infra-log-phase4.md  security-audit-phase1.md  security-audit-phase2.md  security-audit-phase3.md  security-audit-phase4.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx
knowledge/: _index.md
knowledge/.smartrag/: stats.json  wiki.db
saido_agent/: __init__.py  __main__.py  config.py  types.py
saido_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_api.py  test_billing.py  test_cli.py  test_compile.py  test_deployment.py  test_e2e.py  test_embeddings_integration.py  test_enterprise.py  test_finetune.py  test_frontend.py  test_grounding.py  test_high_security.py  test_index.py  test_ingest.py  test_knowledge_bridge.py  test_lint.py  test_marketplace.py  test_mcp_ingest.py  test_med_security.py  test_memory.py  test_outputs.py  test_path_sandbox.py  test_plugin_security.py  test_plugin_v2.py  test_query.py  test_rbac.py  test_routing.py  test_sdk.py  test_shell_security.py  test_slides_charts.py  test_subagent.py  test_synthetic.py  test_voice.py  test_web_ingest.py
(+118 files in other folders)
