[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saido-agent"
version = "0.1.0"
description = "Knowledge-compounding AI agent platform by Saido Labs LLC"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Saido Labs LLC"}]

dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "keyring>=25.0.0",
    "cryptography>=42.0.0",
    "pyyaml>=6.0",
    "sounddevice",
    "smartrag",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
    "pyjwt>=2.8.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.scripts]
saido-agent = "saido_agent.cli.repl:main"

[tool.setuptools.packages.find]
include = ["saido_agent*"]
